<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/selector_save"
        android:title="@string/save"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_export_albums"
        android:icon="@drawable/selector_export_albums"
        android:title="@string/export_albums"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_album_deduplication"
        android:title="@string/album_deduplication"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_add_album_page"
        android:title="@string/add_album_page"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_reset_request_count"
        android:title="@string/reset_request_count"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_grow_all_clover"
        android:title="@string/grow_all_clover"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_get_all_achieve"
        android:title="@string/get_all_achieve"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_get_all_collect"
        android:title="@string/get_all_collect"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_get_all_specialty"
        android:title="@string/get_all_specialty"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_set_all_item_stock"
        android:title="@string/set_all_item_stock"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_call_frog_back_home"
        android:title="@string/call_frog_back_home"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_call_frog_go_travel"
        android:title="@string/call_frog_go_travel"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_set_leaflet_to_gift"
        android:title="@string/set_leaflet_to_gift"
        app:showAsAction="never"/>

</menu>
